# ML-K8s-App-HF-WnB

./: %3  .bumpversion.cfg  .cirrus.yml  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  Parameters.json  Pipfile  README.md  make.bat  makefile  pyproject.toml  setup-local.sh  setup.py
.github/workflows/: codeql.yml  linter.yml
Docker/: Dockerfile
app/: Pipfile  __main__.py  __version__.py  _version.py  app.py  infer.py  loadcfg.py  parametrise.py  prepare.py  requirements-dev.txt  requirements.txt  train.py
app/config/: defaults.yml  huggingface.yml  logging.conf  paramobj.dummy.json  requirements.txt  sweep-wandb.yml  sweep.yml  task.yml  wandb.key.dummy.yml  wandb.yml
app/helper/: Pipeline.py  check_and_sanitize_path.py  check_sanitize_path.py  config_logger.py  configure_logger.py  create_pipeline_object.py  get_and_configure_logger.py  get_and_configure_system_info.py  get_system_info.py  load_configs.py  load_hf_components.py  parametrise_pipeline.py  parse_args.py  parse_configs_into_paramdict.py  parse_configs_into_paramobj.py  prepare_ml_input.py  prepare_sweep.py  sanitize_path.py
app/model/: handle_hf.py  handle_sweep.py  handle_wandb.py  infer_model.py  train_model.py
app/modules/: createPipelineObject.py  inferModel.py  loadConfigs.py  parametrisePipeline.py  prepareLoggingSweep.py  trainModel.py
app/payload/: handle_sweep.py  infer_model.py
app/pipeline/: load_hf_components.py  prepare_pipe_data.py  prepare_pipe_params.py
app/utils/: build_dir_tree_for_readme.py  configure_logging.py  get_and_configure_system_info.py  get_system_info.py  handle_logging.py  handle_paths.py  load_configs.py  load_hf_components.py  log_system_info.py  parse_args.py  parse_configs_into_paramdict.py  prepare_ml_input.py  prepare_pipe_data.py  prepare_pipe_params.py  prepare_sweep.py  toggle_features.py
container/: Dockerfile.distroless
docker/: Dockerfile
reqs/: dev-requirements.txt
requirements/: app-reqs.txt  hf-reqs.txt  mlds-reqs.txt
requirements_other/: pyproject_poetry.toml  requirements-dev.txt  requirements.txt
tests/: conftest.py  test_load_hf_components.py  test_load_hf_components_functionality.py  test_train_model.py
tests/behavior/: test_load_hf_components_behavior.py
tests/functionality/: test_load_hf_components_functionality.py
