[build-system]
requires = ["setuptools>=45.0", "wheel", "setuptools_scm[toml]>=6.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "App_K8s_HF_WnB"
description = "TODO"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["App"]
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "requests",
    'importlib-metadata' #; python_version<"3.8"',
]
dynamic = ["version"] # , "authors"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

# [project.scripts]
# my-script = "my_package.module:function"

[tool.setuptools.package-data]
# https://peps.python.org/pep-0561/#packaging-type-information
# Type Hints https://peps.python.org/pep-0484/
# https://peps.python.org/pep-0561/#packaging-type-information
# pyi stubs: https://www.python.org/dev/peps/pep-0484/#stub-files
# https://mypy.readthedocs.io/en/stable/installed_packages.html#making-pep-561-compatible-packages
App_K8s_HF_WnB = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "__version__.__version__"}
# authors = {attr = "__version__.__authors__"}

# https://setuptools.pypa.io/en/latest/userguide/package_discovery.html#custom-discovery
# auto-discovery
# [tool.setuptools.packages]
# find = {}

[tool.setuptools.packages.find]
where = ["app"]
include = ["*"]
# exclude = ["additional*"]

[tool.isort]
profile = "black"
src_paths = ["app", "tests"]

[tool.black]
line_length = 88
src_paths = ["app", "tests"]
target-version = ["py37", "py38", "py39", "py310"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rfEX -svv --color=yes --code-highlight=yes --doctest-modules"
testpaths = [
    "tests"
]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
# norecursedirs = [
#    "tests/example_scripts"
# ]
# markers = [
#    "requires_gpu: mark a test that requires a GPU to run.",
#    "slow: mark a test that takes a long time to run.",
# ]

# https://pypi.org/project/interrogate/
[tool.interrogate]
fail-under = 95
exclude = ["setup.py", "docs", "build", "tests"]
# ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
# possible values: 0 (minimal output), 1 (-v), 2 (-vv)
verbose = 0

# https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
# https://mypy.readthedocs.io/en/stable/config_file.html#example-pyproject-toml
[tool.mypy]
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
warn_return_any = true

# [[tool.mypy.overrides]]
# module = 'mypy-pytest'
# ignore_missing_imports = true

# src: https://github.com/aio-libs/aiohttp
# [tool.towncrier]
# package = "aiohttp"
# filename = "CHANGES.rst"
# directory = "CHANGES/"
# title_format = "{version} ({project_date})"
# template = "CHANGES/.TEMPLATE.rst"
# issue_format = "`#{issue} <https://github.com/aio-libs/aiohttp/issues/{issue}>`_"
